5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1582_1334.log
== TEST (2019-03-14 16:11:41) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:14:13) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2^³)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2^³)
                             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:40:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ",8 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:40:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ",8 )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.167242
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:34:13) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ",8 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
